<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PrimeraApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Introduzca un mensaje</string>
    <string name="button_send">Enviar</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_emty">EmtyActivity</string>
    <string name="action_search">Buscar</string>
    <string name="action_call">Llamar</string>
    <string name="title_activity_action_bar">ActionBar</string>
	<string name="text_uno">Un texto ira aca</string>
    <string name="img_uno">Imagen 1</string>
    <string name="img_dos">Imagen 2</string>
    <string name="img_tres">Imagen 3</string>
</resources>
