<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appandroid.yael.primeraapp.MainActivity" >

   <EditText
       android:id="@+id/edit_message"
       android:layout_width="wrap_content"
       android:layout_height="0dp"
       android:layout_weight="0.14"
       android:hint="@string/edit_message" />
   
   <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewUno"
        android:src="@drawable/ic_launcher"
        android:scaleType="center"
        android:background = "@drawable/ic_launcher" 
        android:contentDescription="@string/img_uno"
        />

   
<LinearLayout
 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerLocalidad"/>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageCentral"
            android:src="@drawable/ic_launcher"
            android:scaleType="center"
            android:background = "@drawable/ic_launcher" 
            android:contentDescription="@string/img_uno"
            />




        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_uno"
            android:text="@string/text_uno"
            />
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView1" 
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/img_uno"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2" 
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/img_dos"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3" 
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/img_tres"
            />

    </LinearLayout>

</LinearLayout>   
   
</LinearLayout>
